--- a/privacy/index.html
+++ b/privacy/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="slack-app-id" content="ANL7B2FDK">
     <link rel="icon" type="image/png" href="/assets/logo.png" />
-    <title>Open source poll for slack - Privacy Policy</title>
+    <title>Open source poll for Slack - Privacy Policy</title>
   </head>
   <body>
 
