--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta name="slack-app-id" content="A0162QE8600" />
     <link rel="icon" type="image/png" href="/assets/logo.png" />
-    <title>Open source poll for slack</title>
+    <title>Open source poll for Slack</title>
     <!-- STYLES -->
     <link rel="stylesheet" type="text/css" href="/assets/css/index.css" />
     <link rel="stylesheet" type="text/css" href="/assets/css/bootstrap.min.css" />
