--- a/index_plus.html
+++ b/index_plus.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta name="slack-app-id" content="A0162QE8600" />
     <link rel="icon" type="image/png" href="./assets/logo.png" />
-    <title>Open source poll for slack</title>
+    <title>Open source poll for Slack</title>
     <!-- STYLES -->
     <link rel="stylesheet" type="text/css" href="./assets/css/index.css" />
     <link rel="stylesheet" type="text/css" href="./assets/css/bootstrap.min.css" />
@@ -38,7 +38,7 @@
         </div>
       </div>
       <div id="buttons">
-        <a target="_blank" href="https://slack.com/oauth/v2/authorize?client_id=399001638530.4500979337046&scope=chat:write,chat:write.public,commands,users.profile:read,channels:read,groups:read,im:read,mpim:read&user_scope=&stage=xxx">
+        <a target="_blank" href="https://slack.com/oauth/v2/authorize?client_id=399001638530.4500979337046&scope=chat:write,chat:write.public,commands,channels:read,groups:read,mpim:read&user_scope=&stage=xxx">
           <img alt="Add to Slack" src="https://platform.slack-edge.com/img/add_to_slack@2x.png" srcset="https://platform.slack-edge.com/img/add_to_slack.png 2x, https://platform.slack-edge.com/img/add_to_slack@4x.png 4x" height="80" />
         </a>
         <!-- <a href="https://www.buymeacoffee.com/kazualex" target="_blank"><img src="https://cdn.buymeacoffee.com/buttons/v2/default-yellow.png" alt="Buy Me A Coffee" style="height: 77px !important;width: 278px !important;" ></a> -->
